--- a/dtmp-attendance/dtmp-attendance-dao/pom.xml
+++ b/dtmp-attendance/dtmp-attendance-dao/pom.xml
@@ -8,8 +8,17 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
+    <packaging>jar</packaging>
     <artifactId>dtmp-attendance-dao</artifactId>
 
-
+    <properties>
+        <mybatis.version>3.4.2</mybatis.version>
+    </properties>
+    <dependencies>
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+            <version>${mybatis.version}</version>
+        </dependency>
+    </dependencies>
 </project>
