--- a/dtmp-attendance/dtmp-attendance-service/pom.xml
+++ b/dtmp-attendance/dtmp-attendance-service/pom.xml
@@ -11,5 +11,40 @@
 
     <artifactId>dtmp-attendance-service</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.alkaid</groupId>
+            <artifactId>dtmp-attendance-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alkaid</groupId>
+            <artifactId>dtmp-attendance-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alkaid</groupId>
+            <artifactId>dtmp-redis-boot</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <!-- MySql -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.29</version>
+        </dependency>
+        <!--pagehelper-->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>1.1.0</version>
+        </dependency>
+        <!-- 连接池 -->
+        <dependency>
+            <groupId>cn.binux</groupId>
+            <artifactId>spring-boot-starter-druid</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 </project>
